# Model-Database-Protocol

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/ecommerce-mdbp-server/: README.md  server.py  setup_db.py
examples/github-events/: server.py
mdbp/: __init__.py  mdbp.py
mdbp/connectors/: sql.py
mdbp/core/: audit.py  errors.py  intent.py  masking.py  policy.py  query_planner.py  response.py  schema_registry.py
mdbp/transport/: server.py
mdcp/: __init__.py  mdcp.py
mdcp/connectors/: sql.py
mdcp/core/: errors.py  intent.py  policy.py  query_planner.py  response.py  schema_registry.py
mdcp/transport/: server.py
tests/: test_e2e.py
