[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdcp"
version = "0.1.0"
description = "Model Database Context Protocol — intent-based, secure data access for AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Doruk", email = "your-email@example.com"},
]
keywords = ["ai", "llm", "database", "mcp", "intent", "sqlalchemy", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/doruk/mdcp"
Repository = "https://github.com/doruk/mdcp"
Documentation = "https://github.com/doruk/mdcp/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mdcp-server = "mdcp.transport.server:main"
